Fix spacing of link.

--- a/src/app/home/page.module.css
+++ b/src/app/home/page.module.css
@@ -92,8 +92,8 @@
     align-items: center;
 }
 
-.eventsLink {
-
+.eventsLink a p {
+    margin: 0;
 }
 
 .eventsContainer {
